--- a/contact.html
+++ b/contact.html
@@ -112,10 +112,10 @@
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;">
                             <i class="fa fa-phone-alt text-primary"></i>
                         </div>
-                        <div class="ms-4" style="color: darkgreen;">
+                        <div class="ms-4">
                             <p class="mb-2">สนใจตรวจสุขภาพโทรหาเรา</p>
-                            <h5 class="mb-0">098-920-2270 K.บิ๊ก</h5>
-                            <h5 class="mb-0">092-636-8867 K.รุ้ง</h5>
+                            <h5 class="mb-0" style="color: darkgreen;">098-920-2270 K.บิ๊ก</h5>
+                            <h5 class="mb-0"  style="color: darkgreen;">092-636-8867 K.รุ้ง</h5>
                         </div>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                             <p class="mb-2">Mail Us Now</p>
                             <h5 class="mb-0" style="color: darkgreen;">mitrpracha.rbmb@gmail.com</h5>
                             <p class="mb-2">Facebook Fanpage</p>
-                            <a class="fs-6" href="https://www.facebook.com/Bangkokcentrallab">https://www.facebook.com/Bangkokcentrallab</h5>
+                            <a class="fs-6"  style="font-size: 0.80rem;" href="https://www.facebook.com/Bangkokcentrallab">https://www.facebook.com/Bangkokcentrallab</h5>
                         </div>
                     </div>
                 </div>
