--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
                         <div class="ms-4">
                             <p class="mb-2">ที่ตั้งออฟฟิศ</p>
                             <h5 class="fs-6" style="font-family: sarabun; color: darkgreen;">เลขที่ 67/19 ต. หนองปลาหมอ</h5>
-                        <h class="fs-6" style="font-family: sarabun; color: darkgreen;">อ. หนองแค จ.สระบุรี 18140</h>
+                        <h5 class="fs-6" style="font-family: sarabun; color: darkgreen;">อ. หนองแค จ.สระบุรี 18140</h5>
                         </div>
                     </div>
                 </div>
