--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
                             <p class="mb-2">Mail Us Now</p>
                             <h5 class="mb-0" style="color: darkgreen;">mitrpracha.rbmb@gmail.com</h5>
                             <p class="mb-2">Facebook Fanpage</p>
-                            <a class="fs-6"  style="font-size: 0.80rem;" href="https://www.facebook.com/Bangkokcentrallab">https://www.facebook.com/Bangkokcentrallab</h5>
+                            <a class="fs-6"  style="font-size: 0.80rem;" href="https://www.facebook.com/Bangkokcentrallab">เยี่ยมชม R&B Fanpage คลิก</h5>
                         </div>
                     </div>
                 </div>
