--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <i class="fa fa-user-md text-primary"></i>
+                                        <i class="bi bi-lungs"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white mb-2">บริการให้เช่ารถเอ็กซเรย์ดิจิตอล พร้อมเจ้าหน้าที่</p>
+                                        <p class="text-white mb-2"></p>
                                         <h5 class="text-white mb-0">บริการออกหน่วยตรวจสุขภาพเคลื่อนที่</h5>
                                     </div>
                                 </div>
@@ -120,10 +120,10 @@
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <i class="fa fa-check text-primary"></i>
+                                       <i class="bi bi-person-circle"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white mb-2">ให้เช่าเครื่องมือตรวจทางชีวอนามัย</p>
+                                        <p class="text-white mb-2"></p>
                                         <h5 class="text-white mb-0">จัดหาบุคลากรวิชาชีพเพื่อปฎิบัติงาน</h5>
                                     </div>
                                 </div>
@@ -131,22 +131,22 @@
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <i class="fa fa-comment-medical text-primary"></i>
+                                        <i class="bi bi-bus-front-fill"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white mb-2">ดีเยี่ยมด้านบริการ</p>
-                                        <h5 class="text-white mb-0">บุคลากรมากคุณภาพ</h5>
+                                        <p class="text-white mb-2">บริการให้เช่ารถเอ็กซเรย์ดิจิตอล พร้อมเจ้าหน้าที่</p>
+                                        <h5 class="text-white mb-0"></h5>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <i class="fa fa-headphones text-primary"></i>
+                                        <i class="bi bi-suitcase2-fill"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white mb-2">ความแม่นยำของผลตรวจ</p>
-                                        <h5 class="text-white mb-0">อุปกรณ์ที่มีมาตรฐาน</h5>
+                                        <p class="text-white mb-2">บริการให้เช่าเครื่องมือตรวจทางชีวอนามัย</p>
+                                        <h5 class="text-white mb-0"></h5>
                                     </div>
                                 </div>
                             </div>
