--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <i class="bi bi-lungs"></i>
+                                        <i class="bi bi-person-circle"></i>
                                     </div>
                                     <div class="ms-4">
                                         <p class="text-white mb-2"></p>
@@ -142,7 +142,7 @@
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <i class="bi bi-suitcase2-fill"></i>
+                                        <i class="bi bi-person-circle"></i>
                                     </div>
                                     <div class="ms-4">
                                         <p class="text-white mb-2">บริการให้เช่าเครื่องมือตรวจทางชีวอนามัย</p>
@@ -154,8 +154,8 @@
                     </div>
                 </div>
                 <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
-                    <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="https://img5.pic.in.th/file/secure-sv1/Screenshot-2025-03-19-160408.png" style="object-fit: cover;" alt="">
+                    <i class="bi bi-person-circle"></i>
+                        <img class="position-absolute img-fluid w-100 h-100" src="https://img2.pic.in.th/pic/327e2d2cfa6f67f586.png" style="object-fit: cover;" alt="">
                     </div>
                 </div>
             </div>
