--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
-                   
+                   <div class="position-relative h-100">
                         <img class="position-absolute img-thumbnail w-100 h-100" src="https://img5.pic.in.th/file/secure-sv1/2293ffc04855466f7b.png" style="object-fit: cover;" alt="">
                     </div>
                 </div>
