--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 
     <!-- Feature Start -->
-    <div class="container-fluid overflow-hidden bg-primary px-lg-0" style="margin: 6rem 0;" style="background-color: darkgreen;">
+    <div class="container-fluid overflow-hidden bg-secondary px-lg-0" style="margin: 6rem 0;" style="background-color: darkgreen;">
         <div class="container feature px-lg-0">
             <div class="row g-0 mx-lg-0">
                 <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
