--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">R&B Medical</h1>
+            <h1 class="display-3 text-darkgreen mb-3 animated slideInDown">R&B Medical</h1>
             <nav aria-label="breadcrumb animated slideInDown">
               
         </div>
