--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                                         
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white mb-2"></p>
-                                        <h5 class="text-white mb-0">บริการออกหน่วยตรวจสุขภาพเคลื่อนที่</h5>
+                                        <p class="text-white mb-2">บริการออกหน่วยตรวจสุขภาพเคลื่อนที่</p>
+                                        <p class="text-white mb-0"></p>
                                     </div>
                                 </div>
                             </div>
@@ -126,8 +126,8 @@
                         
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white mb-2"></p>
-                                        <h5 class="text-white mb-0">จัดหาบุคลากรวิชาชีพเพื่อปฎิบัติงาน</h5>
+                                        <p class="text-white mb-2">จัดหาบุคลากรวิชาชีพเพื่อปฎิบัติงาน</p>
+                                        <p class="text-white mb-0"></p>
                                     </div>
                                 </div>
                             </div>
