--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">หน้าหลัก</a>
-                <a href="package.html" class="nav-item nav-link">อัตราค่าบริการ</a>
-                <a href="home.html" class="nav-item nav-link">ผลตรวจสุขภาพออนไลน์</a>
+               <a href="home.html" class="nav-item nav-link">ผลตรวจสุขภาพออนไลน์</a>
+                 <a href="package.html" class="nav-item nav-link">ข้อเสนอพิเศษ</a>
                 <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
                 <a href="login.html" class="nav-item nav-link text-secndary">สำหรับเจ้าหน้าที่</a>
                 </div>
