--- a/login.html
+++ b/login.html
@@ -60,9 +60,14 @@
       /* จำกัดความกว้างสูงสุด */
       padding: 20px;
       /* ระยะห่างด้านในของ modal */
-
+      margin-left: 200px;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
       /* เงาของ modal */
+    }
+    @media(max-width: 728px){
+        body{
+            display: none;
+        }
     }
 </style>
 <body>
