--- a/login.html
+++ b/login.html
@@ -97,9 +97,9 @@
                 <a href="index.html" class="nav-item nav-link">หน้าหลัก</a>
                
                 <a href="home.html" class="nav-item nav-link">ผลตรวจสุขภาพออนไลน์</a>
-                 <a href="package.html" class="nav-item nav-link active">ข้อเสนอพิเศษ</a>
+                 <a href="package.html" class="nav-item nav-link">ข้อเสนอพิเศษ</a>
                 <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
-                <a href="login.html" class="nav-item nav-link text-secndary">สำหรับเจ้าหน้าที่</a>
+                <a href="login.html" class="nav-item nav-link text-secondary active">สำหรับเจ้าหน้าที่</a>
                 </div>
               
     </nav>
