--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </div>
                 <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
                    <div class="position-relative h-100">
-                        <img class="position-absolute img-thumbnail w-100 h-100" src="https://img2.pic.in.th/pic/9555555.png" style="object-fit: cover;" alt="">
+                        <img class="position-absolute img-thumbnail w-100 h-100" src="https://img5.pic.in.th/file/secure-sv1/-1ee04bf21b67b3bf8.png" style="object-fit: cover;" alt="">
                     </div>
                 </div>
             </div>
