--- a/admin.html
+++ b/admin.html
@@ -206,12 +206,14 @@
             <div class="collapse navbar-collapse d-md-flex justify-content-end" id="navbarNav">
                 <ul class="nav nav-pills">
                     <li class="nav-item"><a href="login.html" class="nav-link active">Log Out</a></li>
-                  
+                    <button class="nav-item btn-secondary" onclick = "openData()">Data</a></li> 
+                       <button class="nav-item btn-secondary" onclick = "openSite()">Data</a></li> 
                 </ul>
             </div>
         </header>
         <div class="iframe-container">
-            <iframe src="https://docs.google.com/spreadsheets/d/1Vlbfxl6aQq9FOBiM2RyoFLIo5L0lOwCaQogrG4nxj8A/edit?usp=sharing"></iframe>
+            <iframe id="data" src="https://docs.google.com/spreadsheets/d/1Vlbfxl6aQq9FOBiM2RyoFLIo5L0lOwCaQogrG4nxj8A/edit?usp=sharing"></iframe>
+             <iframe id="website" src="https://docs.google.com/spreadsheets/d/1zzmJMatdYdsMhn3ArKqbXASHwVS863na6RBRzW7QmWc/edit?usp=sharing" style="display: none;"></iframe>
         </div>
 
   <div class="container-fluid mt-5">
@@ -233,4 +235,15 @@
     }
     setInterval(updateDateTime, 1000);
     updateDateTime();
+
+    function openData(){
+    $(#"data").visible = true;
+    $(#"website").visible = false;
+    }
+
+
+     function openWebsite(){
+    $(#"data").visible = false;
+    $(#"website").visible = true;
+    }
 </script>
