--- a/admin.html
+++ b/admin.html
@@ -238,13 +238,13 @@
     updateDateTime();
 
     function openData(){
-    $(#"data").visible = true;
-    $(#"website").visible = false;
+    $(#"data").css('display, block');
+    $(#"website").css('display, none');
     }
 
 
      function openWebsite(){
-    $(#"data").visible = false;
-    $(#"website").visible = true;
+    $(#"data").css('display, none');
+    $(#"website").css('display, block');
     }
 </script>
