--- a/admin.html
+++ b/admin.html
@@ -238,8 +238,8 @@
     updateDateTime();
 
     function openData(){
-    $(#"data").css('display, block');
-    $(#"website").css('display, none');
+    $(#"data").css('display', 'block');
+    $(#"website").css('display', 'none');
     }
 
 
