--- a/admin.html
+++ b/admin.html
@@ -243,7 +243,7 @@
     }
 
 
-     function openWebsite(){
+     function openSite(){
     $(#"data").css('display, none');
     $(#"website").css('display, block');
     }
