--- a/package.html
+++ b/package.html
@@ -79,7 +79,7 @@
                
                 <a href="home.html" class="nav-item nav-link">ผลตรวจสุขภาพออนไลน์</a>
                  <a href="package.html" class="nav-item nav-link active">ข้อเสนอพิเศษ</a>
-                 <a href="blog.html" class="nav-item nav-link active">ประกาศ/บทความ</a>
+                 <a href="blog.html" class="nav-item nav-link">ประกาศ/บทความ</a>
                 <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
                 <a href="login.html" class="nav-item nav-link text-secndary">สำหรับเจ้าหน้าที่</a>
                 </div>
