--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 <a href="index.html" class="nav-item nav-link active">หน้าหลัก</a>
                <a href="home.html" class="nav-item nav-link">ผลตรวจสุขภาพออนไลน์</a>
                  <a href="package.html" class="nav-item nav-link">ข้อเสนอพิเศษ</a>
+                 <a href="blog.html" class="nav-item nav-link active">ประกาศ/บทความ</a>
                 <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
                 <a href="login.html" class="nav-item nav-link text-secndary">สำหรับเจ้าหน้าที่</a>
                 </div>
