--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,7 @@
                
                 <a href="home.html" class="nav-item nav-link">ผลตรวจสุขภาพออนไลน์</a>
                  <a href="package.html" class="nav-item nav-link">ข้อเสนอพิเศษ</a>
+                  <a href="blog.html" class="nav-item nav-link">ประกาศ/บทความ</a>
                 <a href="contact.html" class="nav-item nav-link active">ติดต่อเรา</a>
                 <a href="login.html" class="nav-item nav-link text-secndary">สำหรับเจ้าหน้าที่</a>
                 </div>
