--- a/index.html
+++ b/index.html
@@ -165,29 +165,41 @@
             </div>
         </div>
     </div>
-    <!-- Feature End -->
-
-
-  <div class="container-xxl py-5" style = "max-hieght: 250px;">
-    <div class="container">
-        <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-            <p class="d-inline-block border rounded-pill py-1 px-4"></p>
-            <h1>บุคลากรของเรา</h1>
-        </div>
-        <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-            <div class="testimonial-item text-center">
-                <img id="sheetIMG" class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" 
-                     src="img/testimonial-1.jpg" style="width: 100px; height: 100px;">
-                <div class="testimonial-text rounded text-center p-4" style = "background-color: darkgreen;">
-                    <p id="sheetFullname">Loading...</p>
-                    <h5 id="sheetNickname" class="mb-1">Loading...</h5>
-                    <span id="sheetDepart" class="fst-italic">Loading...</span>
+    <!-- Feature End --><div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <p class="d-inline-block border rounded-pill py-1 px-4">บุคลากร</p>
+               
+            </div>
+            <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="https://img2.pic.in.th/pic/fefebfbd143042e9add8d8ef664eae7e.png" style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <h5>คุณ อิสราภรณ์ ดำหมาน</h5>
+                        <h5 class="mb-1">คุณ บิ๊ก</h5>
+                        <span class="fst-italic">ตำแหน่ง CEO</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-2.jpg" style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <h5></h5>
+                        <h5 class="mb-1">></h5>
+                        <span class="fst-italic"></span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-3.jpg" style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <H5></H5>
+                        <h5 class="mb-1"></h5>
+                        <span class="fst-italic"></span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
+    <!-- Testimonial End -->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
