--- a/login.html
+++ b/login.html
@@ -66,12 +66,25 @@
         margin-top: 200px;
     }
     @media(max-width: 728px){
-        body{
-            display: none;
+        .container-error{
+            display: block;
         }
+    }
+    .container-error{
+        display: none;
+        min-width: 728px;
+        min-height: 1200px;
+    }
+    .container-error-text{
+        color: red;
+        padding-top: 300px;
+        padding-left: 20px;
     }
 </style>
 <body>
+    <div class="containner-error">
+        <div class = "container-error-text">หน้านี้ใช้งานได้เฉพาะ บน PC เท่านั้น</div>
+    </div>
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
