--- a/login.html
+++ b/login.html
@@ -74,17 +74,15 @@
         display: none;
         min-width: 728px;
         min-height: 1200px;
-    }
-    .container-error-text{
         color: red;
         padding-top: 300px;
-        padding-left: 20px;
+        padding-left: 30px;
     }
+   
 </style>
 <body>
-    <div class="containner-error">
-        <div class = "container-error-text">หน้านี้ใช้งานได้เฉพาะ บน PC เท่านั้น</div>
-    </div>
+    <div class="containner-error">หน้านี้ใช้งานได้เฉพาะ บน PC เท่านั้น</div>
+  
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
