--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
    
 </style>
 <body>
-    <div class="containner-error">หน้านี้ใช้งานได้เฉพาะ บน PC เท่านั้น</div>
+    <div class="container-error">หน้านี้ใช้งานได้เฉพาะ บน PC เท่านั้น</div>
   
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
