--- a/login.html
+++ b/login.html
@@ -67,13 +67,13 @@
     }
     @media(max-width: 728px){
         .container-error{
-            display: block;
+            display: flex;
         }
     }
     .container-error{
         display: none;
-        min-width: 728px;
-        min-height: 1200px;
+        min-width: 20cm;
+        min-height: 20cm;
         color: red;
         padding-top: 300px;
         padding-left: 30px;
