--- a/login.html
+++ b/login.html
@@ -71,7 +71,8 @@
         }
     }
     .container-error{
-        display: none;
+        display: flex;
+        background-color: gray;
         min-width: 20cm;
         min-height: 20cm;
         color: red;
@@ -81,7 +82,7 @@
    
 </style>
 <body>
-    <div class="container-error">หน้านี้ใช้งานได้เฉพาะ บน PC เท่านั้น</div>
+  
   
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
@@ -114,6 +115,7 @@
                 </div>
               
     </nav>
+      <div class="container-error">หน้านี้ใช้งานได้เฉพาะ บน PC เท่านั้น</div>
     <!-- Navbar End -->
 <div class="container-login">
         <div class="login-box ms-2">
