--- a/login.html
+++ b/login.html
@@ -71,7 +71,7 @@
         }
     }
     .container-error{
-        display: flex;
+        display: none;
         background-color: gray;
         min-width: 20cm;
         min-height: 20cm;
