--- a/login.html
+++ b/login.html
@@ -68,6 +68,12 @@
     @media(max-width: 728px){
         .container-error{
             display: flex;
+         background-color: gray;
+        min-width: 20cm;
+        min-height: 20cm;
+        color: red;
+        padding-top: 300px;
+        padding-left: 30px;
         }
     }
     .container-error{
