--- a/login.html
+++ b/login.html
@@ -66,25 +66,10 @@
         margin-top: 200px;
     }
     @media(max-width: 728px){
-        .container-error{
-            display: flex;
-         background-color: gray;
-        min-width: 20cm;
-        min-height: 20cm;
-        color: red;
-        padding-top: 300px;
-        padding-left: 30px;
-        }
+        body{
+            display:  none;
     }
-    .container-error{
-        display: none;
-        background-color: gray;
-        min-width: 20cm;
-        min-height: 20cm;
-        color: red;
-        padding-top: 300px;
-        padding-left: 30px;
-    }
+
    
 </style>
 <body>
@@ -121,7 +106,7 @@
                 </div>
               
     </nav>
-      <div class="container-error">หน้านี้ใช้งานได้เฉพาะ บน PC เท่านั้น</div>
+      
     <!-- Navbar End -->
 <div class="container-login">
         <div class="login-box ms-2">
