--- a/login.html
+++ b/login.html
@@ -74,7 +74,7 @@
 </style>
 <body>
   
-  
+  <div class="container-md>
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
@@ -150,6 +150,7 @@
             </div>
         </div>
     </div>
+</div>    
     <!-- Footer End -->
 
 
