--- a/admin.html
+++ b/admin.html
@@ -215,7 +215,7 @@
         <div id="data" class="iframe-container">
             <iframe  src="https://docs.google.com/spreadsheets/d/1Vlbfxl6aQq9FOBiM2RyoFLIo5L0lOwCaQogrG4nxj8A/edit?usp=sharing"></iframe>
         </div> 
-         <div id="website" class="iframe-container">                   
+         <div id="website" class="iframe-container" style="display: none;">                   
             <iframe id="website" src="https://docs.google.com/spreadsheets/d/1zzmJMatdYdsMhn3ArKqbXASHwVS863na6RBRzW7QmWc/edit?usp=sharing" style="display: none;"></iframe>
          </div>
   <div class="container-fluid mt-5">
