--- a/admin.html
+++ b/admin.html
@@ -239,13 +239,13 @@
     updateDateTime();
 
     function openData(){
-    $(#"data").css('display', 'block');
-    $(#"website").css('display', 'none');
+    $("#data").css('display', 'block');
+    $("#website").css('display', 'none');
     }
 
 
      function openSite(){
-    $(#"data").css('display, none');
-    $(#"website").css('display, block');
+    $("#data").css('display, none');
+    $("#website").css('display, block');
     }
 </script>
