--- a/admin.html
+++ b/admin.html
@@ -245,7 +245,7 @@
 
 
      function openSite(){
-    $("#data").css('display, none');
-    $("#website").css('display, block');
+    $("#data").css('display', 'none');
+    $("#website").css('display', 'block');
     }
 </script>
