--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white mb-2">บริการให้เช่ารถเอ็กซเรย์ดิจิตอล พร้อมเจ้าหน้าที่</p>
+                                        <p class="text-white mb-2" style="cursor: pointer; href="xray_rent.html">บริการให้เช่ารถเอ็กซเรย์ดิจิตอล พร้อมเจ้าหน้าที่</p>
                                         <h5 class="text-white mb-0"></h5>
                                     </div>
                                 </div>
