--- a/xray_rent.html
+++ b/xray_rent.html
@@ -127,6 +127,15 @@
             text-align: left;
             color: black;
         }
+         .b-example-divider {
+        width: 100%;
+        height: 3rem;
+        background-color: rgba(0, 0, 0, .1);
+        border: solid rgba(0, 0, 0, .15);
+        border-width: 1px 0;
+        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+      }
+
 
         /* ปรับแต่งสำหรับหน้าจอมือถือ */
         @media (max-width: 480px) {
@@ -147,7 +156,8 @@
         }
     </style>
     <body>
-
+    
+      <div class="b-example-divider"></div>
         <div class="container">
             <div class="title"></div>
             <div class="content-wrapper">
