--- a/xray_rent.html
+++ b/xray_rent.html
@@ -169,7 +169,7 @@
                 </div>
             </div>
         </div>
-
+   <div class="b-example-divider"></div>
         <div class="container-fluid bg-secondary text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
        
             <div class="container">
