--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                     
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white mb-2" href="method.html" style="cursor: pointer;">บริการให้เช่าเครื่องมือตรวจทางชีวอนามัย</p>
+                                        <a class="text-white mb-2" href="method.html" style="cursor: pointer;">บริการให้เช่าเครื่องมือตรวจทางชีวอนามัย</a>
                                         <h5 class="text-white mb-0"></h5>
                                     </div>
                                 </div>
