--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                         
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white mb-2" href="checkup.html" style="cursor: pointer;">บริการออกหน่วยตรวจสุขภาพเคลื่อนที่</p>
+                                        <a class="text-white mb-2" href="checkup.html" style="cursor: pointer;">บริการออกหน่วยตรวจสุขภาพเคลื่อนที่</a>
                                         <p class="text-white mb-0"></p>
                                     </div>
                                 </div>
@@ -127,7 +127,7 @@
                         
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white mb-2" href="outsort.html" style="cursor: pointer;">จัดหาบุคลากรวิชาชีพเพื่อปฎิบัติงาน</p>
+                                        <a class="text-white mb-2" href="outsort.html" style="cursor: pointer;">จัดหาบุคลากรวิชาชีพเพื่อปฎิบัติงาน</a>
                                         <p class="text-white mb-0"></p>
                                     </div>
                                 </div>
