--- a/checkup.html
+++ b/checkup.html
@@ -148,6 +148,9 @@
             .title {
                 font-size: 18px;
             }
+            .image-box{
+                margin-left: 10px;
+            }
 
             .subtitle, .image-box, .text-box {
                 font-size: 14px;
