--- a/method.html
+++ b/method.html
@@ -144,6 +144,9 @@
                 max-width: 100%;
                 padding: 10px;
             }
+               .image-box{
+                margin-left: 10px;
+            }
 
             .title {
                 font-size: 18px;
