--- a/checkup.html
+++ b/checkup.html
@@ -159,6 +159,7 @@
         }
     </style>
     <body>
+           <div class="b-example-divider"></div>
         <div class="container">
             <div class="title"></div>
             <div class="content-wrapper">
@@ -166,7 +167,7 @@
                 <img class="image-box m5-3" src="https://img5.pic.in.th/file/secure-sv1/-26fb83defdb6f3a74.png"></div>
                 <div class="text-box">บริการตรวจสุขภาพนอกสถานที่ อาทิ โรงงาน สำนักงาน สถานประกอบการ หรือสถานที่ที่กำหนด ทั้งในกรุงเทพฯ และต่างจังหวัด โดยมีทีมแพทย์ พยาบาล สหวิชาชีพ พร้อมด้วยทีมงานด้านชีวอนามัย ที่มีความชำนาญ และมีประสบการณ์สูง พร้อมให้บริการตรวจสุขภาพ อาทิ การตรวจสุขภาพก่อนเข้าทำงาน การตรวจสุขภาพประจำปี หรือการฉีดวัคซีน เป็นต้น หน่วยตรวจสุขภาพเคลื่อนที่  อำนวยความสะดวกในการตรวจสุขภาพนอกสถานที่ด้วยเทคโนโลยีและเครื่องมือที่ทันสมัย ให้ผลการวิเคราะห์ที่ถูกต้อง แม่นยำ จัดส่งผลอย่างรวดเร็ว โดยสามารถรองรับผู้รับบริการได้ทั้งภาครัฐและเอกชน</div>
                 <div class="text-box mt-3 fs-4 fw-bold" style="color: darkgreen; font-family: sarabun;">สนใจติดต่อ งานตรวจสุขภาพเคลื่อนที่ ได้ที่</div>
-                <div class="text-box">LINE Official ID : @rb_medical2025<br><br>โทร  098-920-2270 คุณบิ๊ก , 092-636-8867 คุณรุ้ง
+                <div class="text-box mb-5">LINE Official ID : @rb_medical2025<br><br>โทร  098-920-2270 คุณบิ๊ก , 092-636-8867 คุณรุ้ง
                 </div>
             </div>
         </div>
