--- a/outsort.html
+++ b/outsort.html
@@ -127,6 +127,13 @@
             text-align: left;
             color: black;
         }
+        .textdetail {
+            border: 3px; 
+            padding: 20px;
+            text-align: left;
+            color: darkgreen;
+            font-size: 1rem;
+        }
          .b-example-divider {
         width: 100%;
         height: 3rem;
@@ -156,6 +163,13 @@
                 font-size: 14px;
                 padding: 15px;
             }
+           .textdetail {
+            border: 3px; 
+            padding: 20px;
+            text-align: left;
+            color: darkgreen;
+            font-size: 0.75rem;
+        }
         }
     </style>
     <body>
@@ -166,7 +180,7 @@
                 <div class="subtitle  fs-3 fw-bold">บริการจัดหาเจ้าหน้าที่วิชาชีพอิสระ</div>
                 <img class="image-box m5-3" src="https://img2.pic.in.th/pic/RB-Medical-Technology-1.png"></div>
                 <div class="text-box">บริการจัดหาเจ้าหน้าที่วิชาชีพอิสระ มากด้วย ความรู้ ความสามารถ ประสบการณ์ และ เอกสารประกอบวิชาชีพ สำหรับหน่วยงานตรวจสุขภาพที่ต้องการเจจ้าหน้าที่เสริม เรายินดีจัดหาให้ท่าน</div>
-                <div class="text-box mt-3 fs-4 fw-bold" style="color: darkgreen; font-family: sarabun;">สนใจติดต่อ เจ้าหน้าที่วิชาชีพอิสระ ได้ที่</div>
+                <div class="textdetail fw-bold" style="color: darkgreen; font-family: sarabun;">สนใจติดต่อ เจ้าหน้าที่วิชาชีพอิสระ ได้ที่</div>
                 <div class="text-box mb-5">LINE Official ID : @rb_medical2025<br><br>โทร  098-920-2270 คุณบิ๊ก , 092-636-8867 คุณรุ้ง
                 </div>
             </div>
