--- a/checkup.html
+++ b/checkup.html
@@ -136,7 +136,13 @@
         box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
       }
 
-
+       .textdetail {
+            border: 3px; 
+            padding: 20px;
+            text-align: left;
+            color: darkgreen;
+            font-size: 1.25rem;
+        }
         /* ปรับแต่งสำหรับหน้าจอมือถือ */
         @media (max-width: 480px) {
             .container {
@@ -151,6 +157,13 @@
             .image-box{
                 margin-left: 10px;
             }
+             .textdetail {
+            border: 3px; 
+            padding: 20px;
+            text-align: left;
+            color: darkgreen;
+            font-size: 1rem;
+        }
 
             .subtitle, .image-box, .text-box {
                 font-size: 14px;
@@ -166,7 +179,7 @@
                 <div class="subtitle  fs-3 fw-bold">บริการตรวจสุขภาพเคลื่อนที่</div>
                 <img class="image-box m5-3" src="https://img5.pic.in.th/file/secure-sv1/-26fb83defdb6f3a74.png"></div>
                 <div class="text-box">บริการตรวจสุขภาพนอกสถานที่ อาทิ โรงงาน สำนักงาน สถานประกอบการ หรือสถานที่ที่กำหนด ทั้งในกรุงเทพฯ และต่างจังหวัด โดยมีทีมแพทย์ พยาบาล สหวิชาชีพ พร้อมด้วยทีมงานด้านชีวอนามัย ที่มีความชำนาญ และมีประสบการณ์สูง พร้อมให้บริการตรวจสุขภาพ อาทิ การตรวจสุขภาพก่อนเข้าทำงาน การตรวจสุขภาพประจำปี หรือการฉีดวัคซีน เป็นต้น หน่วยตรวจสุขภาพเคลื่อนที่  อำนวยความสะดวกในการตรวจสุขภาพนอกสถานที่ด้วยเทคโนโลยีและเครื่องมือที่ทันสมัย ให้ผลการวิเคราะห์ที่ถูกต้อง แม่นยำ จัดส่งผลอย่างรวดเร็ว โดยสามารถรองรับผู้รับบริการได้ทั้งภาครัฐและเอกชน</div>
-                <div class="text-box mt-3 fs-4 fw-bold" style="color: darkgreen; font-family: sarabun;">สนใจติดต่อ งานตรวจสุขภาพเคลื่อนที่ ได้ที่</div>
+                <div class="textdetail fw-bold" style="color: darkgreen; font-family: sarabun;">สนใจติดต่อ งานตรวจสุขภาพเคลื่อนที่ ได้ที่</div>
                 <div class="text-box mb-5">LINE Official ID : @rb_medical2025<br><br>โทร  098-920-2270 คุณบิ๊ก , 092-636-8867 คุณรุ้ง
                 </div>
             </div>
