--- a/method.html
+++ b/method.html
@@ -120,6 +120,13 @@
             justify-content: center;
             margin-left: 100px;
         }
+         .textdetail {
+            border: 3px; 
+            padding: 20px;
+            text-align: left;
+            color: darkgreen;
+            font-size: 1.25rem;
+        }
 
         .text-box {
             border: 3px; 
@@ -156,6 +163,13 @@
                 font-size: 14px;
                 padding: 15px;
             }
+             .textdetail {
+            border: 3px; 
+            padding: 20px;
+            text-align: left;
+            color: darkgreen;
+            font-size: 1rem;
+        }
         }
     </style>
     <body>
@@ -166,7 +180,7 @@
                 <div class="subtitle  fs-3 fw-bold">บริการให้เช่าเครื่องตรวจทางด้านชีวอนามัย</div>
                 <img class="image-box m5-3" src="https://img2.pic.in.th/pic/RB-Medical-Technology-2.png">
                 <div class="text-box">บริการให้เช่าครื่องตรวจด้านชีวอนามัย เช่น Audiometer ,spirometer , vision screener ที่ทันสมัย และทำการทดสอบเทียบ(calibrat) ทุกครั้งก่อนนำไปใช้งานพร้แมด้วยเจ้าหน้าที่ควบคุมเครื่อง บริการให้หน่วยงานตรวจสุขภาพที่มีกำลังเครื่องมือไม่เพียงพอ</div>
-                <div class="text-box mt-3 fs-4 fw-bold" style="color: darkgreen; font-family: sarabun;">สนใจติดต่อ เช่าอุปกรณ์ตรวจด้านชีวอนามัย ได้ที่</div>
+                <div class="textdetail fw-bold" style="color: darkgreen; font-family: sarabun;">สนใจติดต่อ เช่าอุปกรณ์ตรวจด้านชีวอนามัย ได้ที่</div>
                 <div class="text-box mb-5">LINE Official ID : @rb_medical2025<br><br>โทร  098-920-2270 คุณบิ๊ก , 092-636-8867 คุณรุ้ง
                 </div>
             </div>
