--- a/xray_rent.html
+++ b/xray_rent.html
@@ -179,7 +179,7 @@
                 <img class="image-box ms-3" src="https://img5.pic.in.th/file/secure-sv1/-17a9e11cb4d681a77.png"></div>
                 <div class="text-box">บริการนี้เหมาะสำหรับ สถานพยาบาล/รพ.ที่ต้องการใช้บริการเอกซเรย์ดิจิตอลอย่างเดียว หรือหน่วยงาน/บริษัท ที่มีบุคลากรที่มีความเสี่ยงต่อการเกิดโรคปอด ต้องการตรวจเอกซเรย์ปอดเพียงอย่างเดียว พร้อมการรายงานผลจากรังสีแพทย์ โดยรายงานผลเป็นซีดีฉบับรวมสำหรับแผนกบุคคล และซีดีแยกแผ่นรายบุคคลสำหรับผู้รับการตรวจแต่ละราย  นอกจากนี้ ยังมีบริการรับอ่านฟิล์มโดยรังสีแพทย์ สำหรับสถานพยาบาล/ผู้ประกอบการที่ไม่มีรังสีแพทย์ประจำ</div>
                 <div class="textdetail fw-bold" style="color: darkgreen; font-family: sarabun;">สนใจติดต่อ เช่ารถเอกซเรย์ดิจิตอลเคลื่อนที่ ได้ที่</div>
-                <div class="text-box mb-5">LINE Official ID : @rb_medical2025<br><br>โทร  098-920-2270 คุณบิ๊ก , 092-636-8867 คุณรุ้ง
+                <div class="text-box mb-5 ms-3">LINE Official ID : @rb_medical2025<br><br>โทร  098-920-2270 คุณบิ๊ก , 092-636-8867 คุณรุ้ง
                 </div>
             </div>
         </div>
