--- a/outsort.html
+++ b/outsort.html
@@ -181,7 +181,7 @@
                 <img class="image-box m5-3" src="https://img2.pic.in.th/pic/RB-Medical-Technology-1.png"></div>
                 <div class="text-box">บริการจัดหาเจ้าหน้าที่วิชาชีพอิสระ มากด้วย ความรู้ ความสามารถ ประสบการณ์ และ เอกสารประกอบวิชาชีพ สำหรับหน่วยงานตรวจสุขภาพที่ต้องการเจจ้าหน้าที่เสริม เรายินดีจัดหาให้ท่าน</div>
                 <div class="textdetail fw-bold" style="color: darkgreen; font-family: sarabun;">สนใจติดต่อ เจ้าหน้าที่วิชาชีพอิสระ ได้ที่</div>
-                <div class="text-box mb-5">LINE Official ID : @rb_medical2025<br><br>โทร  098-920-2270 คุณบิ๊ก , 092-636-8867 คุณรุ้ง
+                <div class="text-box mb-5 ms-3">LINE Official ID : @rb_medical2025<br><br>โทร  098-920-2270 คุณบิ๊ก , 092-636-8867 คุณรุ้ง
                 </div>
             </div>
         </div>
