--- a/method.html
+++ b/method.html
@@ -78,7 +78,7 @@
        
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">หน้าหลัก</a>
+                <a href="index.html" class="nav-item nav-link">หน้าหลัก</a>
                <a href="home.html" class="nav-item nav-link">ผลตรวจสุขภาพออนไลน์</a>
                  <a href="package.html" class="nav-item nav-link">ข้อเสนอพิเศษ</a>
                  <a href="blog.html" class="nav-item nav-link">ประกาศ/บทความ</a>
@@ -181,7 +181,7 @@
                 <img class="image-box m5-3" src="https://img2.pic.in.th/pic/RB-Medical-Technology-2.png">
                 <div class="text-box">บริการให้เช่าครื่องตรวจด้านชีวอนามัย เช่น Audiometer ,spirometer , vision screener ที่ทันสมัย และทำการทดสอบเทียบ(calibrat) ทุกครั้งก่อนนำไปใช้งานพร้แมด้วยเจ้าหน้าที่ควบคุมเครื่อง บริการให้หน่วยงานตรวจสุขภาพที่มีกำลังเครื่องมือไม่เพียงพอ</div>
                 <div class="textdetail fw-bold" style="color: darkgreen; font-family: sarabun;">สนใจติดต่อ เช่าอุปกรณ์ตรวจด้านชีวอนามัย ได้ที่</div>
-                <div class="text-box mb-5">LINE Official ID : @rb_medical2025<br><br>โทร  098-920-2270 คุณบิ๊ก , 092-636-8867 คุณรุ้ง
+                <div class="text-box mb-5 ms-3">LINE Official ID : @rb_medical2025<br><br>โทร  098-920-2270 คุณบิ๊ก , 092-636-8867 คุณรุ้ง
                 </div>
             </div>
         </div>
