--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="p-lg-5 ps-lg-0">
                         <p class="d-inline-block border rounded-pill text-light py-1 px-4">บริการของเรา</p>
-                        <h1 class="text-white mb-4">ให้เราเป็นผู้ช่วยที่ดีของคุณ</h1>
+                        <h1 class="text-white mb-4" style="font-family: sarabun;">ให้เราเป็นผู้ช่วยที่ดีของคุณ</h1>
                         <p class="text-white mb-4 pb-2">นอกจากบริการวิเคราะห์และรายงานผลทางการแพทย์แล้ว เรายังมีบริการที่ยอดเยี่ยมอื่นๆให้ท่านอีก</p>
                         <div class="row g-4">
                             <div class="col-6">
