--- a/admin.html
+++ b/admin.html
@@ -216,7 +216,7 @@
             <iframe id="data" src="https://docs.google.com/spreadsheets/d/1Vlbfxl6aQq9FOBiM2RyoFLIo5L0lOwCaQogrG4nxj8A/edit?usp=sharing"></iframe>
         </div> 
          <div class="iframe-container">                   
-            <iframe id="website" src="https://docs.google.com/spreadsheets/d/1zzmJMatdYdsMhn3ArKqbXASHwVS863na6RBRzW7QmWc/edit?gid=0#gid=0"></iframe>
+            <iframe id="website" src="https://docs.google.com/spreadsheets/d/1zzmJMatdYdsMhn3ArKqbXASHwVS863na6RBRzW7QmWc/edit?gid=0#gid=0" style="display: none;"></iframe>
          </div>
   <div class="container-fluid mt-5">
     <footer class="d-flex justify-content-between py-3 border-top">
