--- a/admin.html
+++ b/admin.html
@@ -174,8 +174,8 @@
 
         .iframe-container {
             width: 80%;
-            max-width: 1300px;
-            min-width: 1300px;
+            max-width: 600px;
+            min-width: 600px;
             height: 700px;
             border-radius: 4px;
             overflow: hidden;
@@ -212,12 +212,14 @@
                 </ul>
             </div>
         </header>
+                           <div class="row">
         <div  class="iframe-container">
             <iframe id="data" src="https://docs.google.com/spreadsheets/d/1Vlbfxl6aQq9FOBiM2RyoFLIo5L0lOwCaQogrG4nxj8A/edit?usp=sharing"></iframe>
         </div> 
          <div class="iframe-container" style="display: none;">                   
             <iframe id="website" src="https://docs.google.com/spreadsheets/d/1zzmJMatdYdsMhn3ArKqbXASHwVS863na6RBRzW7QmWc/edit?usp=drive_link"></iframe>
          </div>
+                           </div>
   <div class="container-fluid mt-5">
     <footer class="d-flex justify-content-between py-3 border-top">
         <div>
