--- a/admin.html
+++ b/admin.html
@@ -216,7 +216,7 @@
         <div  class="iframe-container">
             <iframe id="data" src="https://docs.google.com/spreadsheets/d/1Vlbfxl6aQq9FOBiM2RyoFLIo5L0lOwCaQogrG4nxj8A/edit?usp=sharing"></iframe>
         </div> 
-         <div class="iframe-container" style="display: none;">                   
+         <div class="iframe-container">                   
             <iframe id="website" src="https://docs.google.com/spreadsheets/d/1zzmJMatdYdsMhn3ArKqbXASHwVS863na6RBRzW7QmWc/edit?usp=drive_link"></iframe>
          </div>
                            </div>
