--- a/main.html
+++ b/main.html
@@ -406,23 +406,32 @@ function loadDropdownData() {
         });
 }
     
-       function checkCredentials() {
+     function checkCredentials() {
     const dropdown = document.getElementById('dynamicDropdown');
     const selectedValue = dropdown.value; // ค่าที่เลือกใน dropdown
     const passwordInput = document.getElementById('floatingPassword').value; // รหัสผ่านที่ผู้ใช้กรอก
+    const urlsheet1 = `https://script.google.com/macros/s/AKfycbw0a1dzQQcp8NzlnOmXz4k6yMvI-NDFYgpLpXXR8iF_JO-PS9v4MgOGvsm89Y_DugUlOg/exec`;
 
-    // ตรวจสอบค่าที่เลือกและรหัสผ่าน
-    const isValid = sheetData.some(row => row.username === selectedValue && row.password === passwordInput);
+    fetch(urlsheet1)
+        .then(response => response.json())
+        .then(data => {
+            // ตรวจสอบค่าที่เลือกและรหัสผ่าน
+            const isValid = data.some(row => row.username === selectedValue && row.password === passwordInput);
 
-    if (isValid) {
-        // เก็บค่า dropdown ที่เลือกไว้ใน Local Storage
-        localStorage.setItem('selectedDropdownValue', selectedValue);
+            if (isValid) {
+                // เก็บค่า dropdown ที่เลือกไว้ใน Local Storage
+                localStorage.setItem('selectedDropdownValue', selectedValue);
 
-        // เปลี่ยนหน้าไปที่ pe.html
-        window.location.href = 'pe.html';
-    } else {
-        alert('Wrong Username or Password!! Please try again.');
-    }
+                // เปลี่ยนหน้าไปที่ pe.html
+                window.location.href = 'pe.html';
+            } else {
+                alert('Wrong Username or Password!! Please try again.');
+            }
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+            alert('Error connecting to the server. Please try again later.');
+        });
 }
 
     
