--- a/main.html
+++ b/main.html
@@ -411,8 +411,7 @@ function loadDropdownData() {
     const selectedValue = dropdown.value; // Username ที่เลือก
     const passwordInput = document.getElementById('floatingPassword').value; // รหัสผ่านที่ผู้ใช้กรอก
 
-    const urlsheet1 = `https://script.google.com/macros/s/AKfycbw0a1dzQQcp8NzlnOmXz4k6yMvI-NDFYgpLpXXR8iF_JO-PS9v4MgOGvsm89Y_DugUlOg/exec`;
-
+    const urlsheet1 = `https://script.google.com/macros/s/AKfycbw0koLiMJDXwb_F0xOD4tUuC4VAaFfqgpCodoe_shoKmxb9DEnH_AHuTaX0TAHKySSRWQ/exec
     fetch(urlsheet1, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
