--- a/personal.html
+++ b/personal.html
@@ -594,7 +594,7 @@ function searchRecord() {
  <tr>
       <th scope="row" colspan="2"></th>
       <td>Basophill</td>
-        <td class="text-center">${row.bas]}</td> 
+        <td class="text-center">${row.bas}</td> 
        <td class="text-center">0.2-1.2%</td> 
     </tr>   
 
