--- a/checkup.html
+++ b/checkup.html
@@ -80,6 +80,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">หน้าหลัก</a>
                <a href="home.html" class="nav-item nav-link">ผลตรวจสุขภาพออนไลน์</a>
+                <a href="price.html" class="nav-item nav-link">อัตรา</a>
                  <a href="package.html" class="nav-item nav-link">ข้อเสนอพิเศษ</a>
                  <a href="blog.html" class="nav-item nav-link">ประกาศ/บทความ</a>
                 <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
