--- a/price.html
+++ b/price.html
@@ -177,6 +177,11 @@
 
 
         }
+            .custom-table {
+            width: 90%;
+            border-collapse: collapse;
+            border-radius: 30px;
+        }
 
         .tabledetail {
             font-size: 0.70rem;
