--- a/price.html
+++ b/price.html
@@ -177,6 +177,9 @@
 
 
         }
+            .container-sm{
+                width: 90%;
+            }
             .custom-table {
             width: 90%;
             border-collapse: collapse;
