--- a/price.html
+++ b/price.html
@@ -203,7 +203,7 @@
     <div class="container-sm">
         <h class="tablehead mb-5 fw-bold " style="font-family: sarabun; color: darkgreen;">อัตราการให้บริการ</h>
         <p class="tabledetail mt-5 " style="font-family: sarabun; color: darkgreen;">รายการตรวจสุขภาพทั่วไป</p>
-        <table class="custom-table ms-5">
+        <table class="custom-table mb-5">
 
             <thead class="bg-secondary" style="color:aliceblue">
                 <tr>
@@ -222,7 +222,7 @@
 
         
         <p class="tabledetail mt-5 " style="font-family: sarabun; color: darkgreen;">รายการตรวจวิเคราะห์สารเคมีทางชีวภาพ(Toxico)</p>
-        <table class="custom-table ms-5">
+        <table class="custom-table mb-5">
 
             <thead class="bg-secondary" style="color:aliceblue">
                 <tr>
