--- a/price.html
+++ b/price.html
@@ -173,7 +173,7 @@
 
             .tablehead {
             font-size: 1rem;
-            margin-left: 30px;
+      
 
 
         }
@@ -188,7 +188,7 @@
 
         .tabledetail {
             font-size: 0.90rem;
-            margin-left: 30px;
+        
 
         }
         .custom-table th{
@@ -200,8 +200,8 @@
 
         }
     </style>
-    <div class="container-sm">
-        <h class="tablehead mb-5 fw-bold " style="font-family: sarabun; color: darkgreen;">อัตราการให้บริการ</h>
+    <div class="container-sm mt-5">
+        <h class="tablehead mt-5 fw-bold " style="font-family: sarabun; color: darkgreen;">อัตราการให้บริการ</h>
         <p class="tabledetail mt-5 " style="font-family: sarabun; color: darkgreen;">รายการตรวจสุขภาพทั่วไป</p>
         <table class="custom-table mb-5">
 
