--- a/price.html
+++ b/price.html
@@ -201,8 +201,8 @@
         }
     </style>
     <div class="container-sm mt-5">
-        <h class="tablehead mt-5 fw-bold " style="font-family: sarabun; color: darkgreen;">อัตราการให้บริการ</h>
-        <p class="tabledetail mt-5 " style="font-family: sarabun; color: darkgreen;">รายการตรวจสุขภาพทั่วไป</p>
+        <div class="tablehead mt-5 fw-bold " style="font-family: sarabun; color: darkgreen;">อัตราการให้บริการ</div>
+        <div class="tabledetail mt-5 " style="font-family: sarabun; color: darkgreen;">รายการตรวจสุขภาพทั่วไป</div>
         <table class="custom-table mb-5">
 
             <thead class="bg-secondary" style="color:aliceblue">
@@ -221,7 +221,7 @@
 
 
         
-        <p class="tabledetail mt-5 " style="font-family: sarabun; color: darkgreen;">รายการตรวจวิเคราะห์สารเคมีทางชีวภาพ(Toxico)</p>
+        <div class="tabledetail mt-5 " style="font-family: sarabun; color: darkgreen;">รายการตรวจวิเคราะห์สารเคมีทางชีวภาพ(Toxico)</div>
         <table class="custom-table mb-5">
 
             <thead class="bg-secondary" style="color:aliceblue">
