--- a/price.html
+++ b/price.html
@@ -200,9 +200,11 @@
 
         }
     </style>
-    <div class="container-sm mt-5">
+    <div class="container-fluid mt-5">
         <div class="tablehead mt-5 fw-bold " style="font-family: sarabun; color: darkgreen;">อัตราการให้บริการ</div>
         <div class="tabledetail mt-5 " style="font-family: sarabun; color: darkgreen;">รายการตรวจสุขภาพทั่วไป</div>
+    </div>
+    <div class="container-sm">
         <table class="custom-table mb-5">
 
             <thead class="bg-secondary" style="color:aliceblue">
@@ -218,10 +220,12 @@
             </tbody>
 
         </table>
+    </div>
 
-
-        
+      <div class="container-fluid">
         <div class="tabledetail mt-5 " style="font-family: sarabun; color: darkgreen;">รายการตรวจวิเคราะห์สารเคมีทางชีวภาพ(Toxico)</div>
+      </div>
+    <div class="container-sm">
         <table class="custom-table mb-5">
 
             <thead class="bg-secondary" style="color:aliceblue">
