--- a/price.html
+++ b/price.html
@@ -177,6 +177,9 @@
 
 
         }
+           .container-fluid{
+              width: 100%;
+         }
             .container-sm{
                 width: 90%;
             }
