--- a/price.html
+++ b/price.html
@@ -88,7 +88,7 @@
                 </div>
               
     </nav>
-    <div class="b-example-divider"></div>
+    <div class="b-example-divider">อัตราค่าตรวจ</div>
     <style>
         #programlist tr {
             height: 10px;
