--- a/price.html
+++ b/price.html
@@ -88,7 +88,7 @@
                 </div>
               
     </nav>
-    <div class="b-example-divider">อัตราค่าตรวจ</div>
+    <div class="b-example-divider mt-2 ms-3" style="font-family: sarabun; color: darkgreen;">อัตราค่าใช้จ่ายตามรายการตรวจ</div>
     <style>
         #programlist tr {
             height: 10px;
@@ -204,7 +204,7 @@
         }
     </style>
    
-        <div class="tablehead mt-5 fw-bold " style="font-family: sarabun; color: darkgreen;">อัตราการให้บริการ</div>
+        
         <div class="tabledetail mt-5 mb-3 " style="font-family: sarabun; color: darkgreen;">รายการตรวจสุขภาพทั่วไป</div>
    
     <div class="container-sm">
