--- a/price.html
+++ b/price.html
@@ -88,7 +88,7 @@
                 </div>
               
     </nav>
-    <div class="b-example-divider mt-2 ms-3" style="font-family: sarabun; color: darkgreen;">อัตราค่าใช้จ่ายตามรายการตรวจ</div>
+    <div class="b-example-divider pt-2 ps-3" style="font-family: sarabun; color: darkgreen;">อัตราค่าใช้จ่ายตามรายการตรวจ</div>
     <style>
         #programlist tr {
             height: 10px;
