--- a/price.html
+++ b/price.html
@@ -238,7 +238,7 @@
                     <th scope="col">ราคา</th>
                 </tr>
             </thead>
-            <tbody id="programlist">
+            <tbody id="programlist" style="font-size: 0.75rem;">
 
 
             </tbody>
