--- a/price.html
+++ b/price.html
@@ -264,7 +264,7 @@
             </tbody>
 
         </table>
-   
+         </div>
     <div class="b-example-divider"></div>
     <script>
         function loadAllRecords() {
